<resources>
    <string name="app_name">santour</string>
    <string name="title_activity_createtrack">Map</string>
    <string name="name">Name</string>
    <string name="takeP">Take Picture</string>
    <string name="gps">GPS Data</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="picture">Picture</string>
    <string name="black">#000</string>
    <string name="seekMin">0</string>
    <string name="seekMax">10</string>
    <string name="verticality">Verticality</string>
    <string name="rocks">Rocks</string>
    <string name="slope">Slope</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDe93n2q3_1zhOMc4hPKna2QLm-L0ezaFk</string>
    <string name="title_activity_track_list_map">Map</string>
</resources>
