<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/createPoi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:layout_marginTop="16dp"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/createPoi"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" android:contentDescription="@string/picture"/>

            <Button
                android:id="@+id/takePicture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendTakePicture"
                android:text="@string/takeP"
                android:layout_below="@+id/imageView" />

            <LinearLayout
                android:id="@+id/layout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/takePicture"
                android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/gpsdataX"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:enabled="false"/>

            <EditText
                android:id="@+id/gpsdataY"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:enabled="false"/>

            </LinearLayout>

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_below="@+id/layout"
                android:hint="@string/description"
                android:layout_marginTop="16dp"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/description"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/savePOI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sendCreatePOI"
                    android:text="@string/save"
                    android:layout_weight="1"
                    android:visibility="visible"/>

                <Button
                    android:id="@+id/nextPOD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:onClick="sendNextPOD"
                    android:layout_weight="1"
                    android:visibility="visible"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>

</android.support.v4.widget.DrawerLayout>
