<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/verticality"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verticality"
                android:buttonTint="#000"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textMin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMin"
                    android:layout_below="@id/seekBar1"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textMax1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMax"
                    android:layout_below="@id/seekBar1"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"/>

                <SeekBar
                    android:id="@+id/seekBar1"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progressTint="#000"
                    android:thumbTint="#000"
                    android:progress="3"
                    android:visibility="gone"/>

            </RelativeLayout>

            <CheckBox
                android:id="@+id/rocks"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rocks"
                android:buttonTint="#000"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textMin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMin"
                    android:layout_below="@id/seekBar2"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textMax2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMax"
                    android:layout_below="@id/seekBar2"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"/>

                <SeekBar
                    android:id="@+id/seekBar2"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:progressTint="#000"
                    android:thumbTint="#000"
                    android:max="10"
                    android:progress="3"
                    android:visibility="gone"/>

            </RelativeLayout>

            <CheckBox
                android:id="@+id/slope"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slope"
                android:buttonTint="#000"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textMin3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMin"
                    android:layout_below="@id/seekBar3"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textMax3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seekMax"
                    android:layout_below="@id/seekBar3"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"/>

                <SeekBar
                    android:id="@+id/seekBar3"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progressTint="#000"
                    android:thumbTint="#000"
                    android:progress="3"
                    android:visibility="gone"/>
            </RelativeLayout>

            <Button
                android:id="@+id/saveDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:onClick="sendSavePOD"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>

</android.support.v4.widget.DrawerLayout>
